prevent blue text on ios

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ p {
     background: var(--card-bg-color);
     border: 6px solid var(--card-border);
     border-radius: 10px;
+    color: black;
     /*float: left;*/
     font-size: 2.2vw;
     font-weight: bold;
@@ -88,6 +89,7 @@ p {
     flex-shrink: 0;
     overflow-x: visible;
     overflow-y: visible;
+    -webkit-appearance: none;
 }
 
 .card-smaller-font {
@@ -169,11 +171,13 @@ p {
 }
 
 .input-elements {
+    color: black;
     margin: 0.5rem;
     padding: 0.3rem;
     width: 75%;
     align-self: center;
     text-wrap: avoid;
+    -webkit-appearance: none;
 }
 
 .kbd-navigation .card:focus {
